api-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-test
  template:
    metadata:
      labels:
        app: api-test
    spec:
      containers:
        - name: api-test
          image: 533267037417.dkr.ecr.us-east-1.amazonaws.com/toptal-api:v1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 4004
          resources:
            requests:
              cpu: 500m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
