deployment.yaml
---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jakshem
  namespace: construction
  labels:
    app.kubernetes.io/name: jakshem
    app.kubernetes.io/component: deployment
    app.kubernetes.io/managed-by: devopsengineersam
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: jakshem
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jakshem
    spec:
      containers:
      - name: construction-web
        image: 533267037417.dkr.ecr.us-east-1.amazonaws.com/construction:v1.1.6 #latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 500m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi

# Service
---
apiVersion: v1
kind: Service
metadata:
  name: jakshem
  namespace: construction
  labels:
    app.kubernetes.io/name: jakshem
    app.kubernetes.io/component: service
    app.kubernetes.io/managed-by: devopsengineersam
spec:
  selector:
    app.kubernetes.io/name: jakshem
  ports:
  - name: http
    port: 80
    targetPort: 80
    
# Ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
   # alb.ingress.kubernetes.io/healthcheck-path: /usr/share/nginx/html/index.html
    alb.ingress.kubernetes.io/load-balancer-name: jakshem
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-0078e7fc2985ae74d, subnet-086210ec55bfdea5d, subnet-0ab883e73c51ef044
    
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:533267037417:certificate/483743fd-14bf-4650-b08b-36c637ab32b4
  name: jakshem
  namespace: construction
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - backend:
          service:
            name: jakshem
            port:
              number: 80
        path: /
        pathType: Prefix
